--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,6 +17,8 @@
         android:layout_height="wrap_content"
         android:text="@string/name"
         android:textAlignment="center"
+        android:background="@color/colorAccent"
+        android:paddingBottom="@dimen/small_padding"
         app:fontFamily="@font/roboto" />
 
     <EditText
